--- a/package.json
+++ b/package.json
@@ -1,58 +1,57 @@
 {
-	"name": "@nesvet/conveyer",
-	"version": "1.0.2107",
-	"description": "Project build/dev pipeline",
-	"type": "module",
-	"module": "./lib/index.js",
-	"main": "./lib/index.js",
-	"exports": {
-		"./stages": "./lib/stages/index.js",
-		"./env": "./lib/env.js",
-		"./Packages": "./lib/utils/Packages.js"
-	},
-	"bin": "./lib/index.js",
-	"imports": {
-		"#utils/*": "./lib/utils/*"
-	},
-	"packageManager": "yarn@1.22.22",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/nesvet/conveyer.git"
-	},
-	"keywords": [
-		"build",
-		"dev",
-		"watch",
-		"pipeline",
-		"esbuild",
-		"bundle",
-		"copy",
-		"mongodb",
-		"nginx"
-	],
-	"author": "Eugene Nesvetaev <dev@nesvet.dev> (https://nesvet.dev/)",
-	"license": "MIT",
-	"dependencies": {
-		"@nesvet/n": "^1",
-		"anymatch": "^3",
-		"chalk": "^5",
-		"chokidar": "^3",
-		"compare-versions": "^6",
-		"esbuild": "^0.20",
-		"esbuild-node-externals": "^1.13.0",
-		"esbuild-plugin-jscc": "^1",
-		"fs-extra": "^11",
-		"open": "^8",
-		"ora": "^6",
-		"pkg-dir": "^7",
-		"process-request": "^1",
-		"resolve-package-path": "^4",
-		"zip-a-folder": "^2"
-	},
-	"devDependencies": {
-		"@nesvet/eslint-config": "^1"
-	}
+  "name": "@nesvet/conveyer",
+  "version": "2.0.0",
+  "description": "Project build/dev pipeline",
+  "type": "module",
+  "module": "./lib/index.js",
+  "main": "./lib/index.js",
+  "exports": {
+    ".": "./lib/index.js",
+    "./env": "./lib/env.js",
+    "./Packages": "./lib/utils/Packages.js"
+  },
+  "bin": "./lib/cli.js",
+  "imports": {
+    "#utils/*": "./lib/utils/*"
+  },
+  "packageManager": "bun@1.1.8",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nesvet/conveyer.git"
+  },
+  "keywords": [
+    "build",
+    "dev",
+    "watch",
+    "pipeline",
+    "esbuild",
+    "bundle",
+    "copy",
+    "mongodb",
+    "nginx"
+  ],
+  "author": "Eugene Nesvetaev <dev@nesvet.dev> (https://nesvet.dev/)",
+  "license": "MIT",
+  "dependencies": {
+    "@nesvet/n": "^1",
+    "anymatch": "^3",
+    "chalk": "^5",
+    "chokidar": "^3",
+    "compare-versions": "^6",
+    "esbuild": "^0.20",
+    "esbuild-plugin-jscc": "^1",
+    "fs-extra": "^11",
+    "hash-wasm": "^4",
+    "open": "^8",
+    "ora": "^6",
+    "process-request": "^1",
+    "resolve-package-path": "^4",
+    "zip-a-folder": "^2"
+  },
+  "devDependencies": {
+    "@nesvet/eslint-config": "^1"
+  }
 }
