--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "bin": "./lib/cli.js",
   "imports": {
-    "#utils/*": "./lib/utils/*"
+    "#utils/*": "./lib/utils/*.js"
   },
   "packageManager": "bun@1.1.34",
   "scripts": {
