--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "bin": "./lib/cli.js",
   "imports": {
-    "#utils/*": "./lib/utils/*.js"
+    "#utils": "./lib/utils/index.js"
   },
   "packageManager": "bun@1.1.36",
   "scripts": {
