--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "zip-a-folder": "^3.1.8"
   },
   "devDependencies": {
-    "@nesvet/eslint-config": "^2.0.34"
+    "@types/node": "^22.10.10",
+    "typescript": "^5.7.3"
   }
 }
