--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
 		// "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 		
 		/* Language and Environment */
-		"target": "esnext",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-		// "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+		"target": "ESNext",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+		"lib": [ "ESNext" ],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
 		// "jsx": "preserve",                                /* Specify what JSX code is generated. */
 		// "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
 		// "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
@@ -25,8 +25,8 @@
 		// "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 		
 		/* Modules */
-		"module": "esnext",                                /* Specify what module code is generated. */
-		"rootDir": ".",                                  /* Specify the root folder within your source files. */
+		"module": "ESNext",                                /* Specify what module code is generated. */
+		"rootDir": "lib",                                  /* Specify the root folder within your source files. */
 		"moduleResolution": "bundler",                     /* Specify how TypeScript looks up a file from a given module specifier. */
 		// "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
 		// "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
@@ -55,9 +55,9 @@
 		// "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
 		// "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
 		// "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
-		"outDir": "dist",                                   /* Specify an output folder for all emitted files. */
+		// "outDir": "dist",                                   /* Specify an output folder for all emitted files. */
 		// "removeComments": true,                           /* Disable emitting comments. */
-		// "noEmit": true,                                   /* Disable emitting files from a compilation. */
+		"noEmit": true,                                   /* Disable emitting files from a compilation. */
 		// "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
 		// "importsNotUsedAsValues": "remove",               /* Specify emit/checking behavior for imports that are only used for types. */
 		// "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
