--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "compare-versions": "^6.1.1",
     "esbuild": "^0.24.2",
     "esbuild-plugin-jscc": "^1.0.14",
-    "fs-extra": "^11.2.0",
+    "globrex": "^0.1.2",
     "hash-wasm": "^4.12.0",
     "open": "^10.1.0",
     "ora": "^8.1.1",
