--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "imports": {
     "#utils": "./lib/utils/index.js"
   },
-  "packageManager": "bun@1.1.36",
+  "packageManager": "bun@1.2.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -36,13 +36,14 @@
   "author": "Eugene Nesvetaev <dev@nesvet.dev> (https://nesvet.dev/)",
   "license": "MIT",
   "dependencies": {
-    "@nesvet/n": "^1.1.7",
+    "@nesvet/n": "^1.1.21",
     "anymatch": "^3.1.3",
     "chalk": "^5.4.1",
     "chokidar": "^4.0.3",
     "compare-versions": "^6.1.1",
     "esbuild": "^0.24.2",
     "esbuild-plugin-jscc": "^1.0.14",
+    "fs-extra": "^11.3.0",
     "globrex": "^0.1.2",
     "hash-wasm": "^4.12.0",
     "open": "^10.1.0",
@@ -52,6 +53,7 @@
     "zip-a-folder": "^3.1.8"
   },
   "devDependencies": {
+    "@nesvet/eslint-config": "^2.0.42",
     "@types/node": "^22.10.10",
     "typescript": "^5.7.3"
   }
