--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,11 +22,11 @@
 		// "reactNamespace": "",                             /* Specify the object invoked for 'createElement'. This only applies when targeting 'react' JSX emit. */
 		// "noLib": true,                                    /* Disable including any library files, including the default lib.d.ts. */
 		// "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
-		// "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
+		"moduleDetection": "force",                        /* Control what method is used to detect module-format JS files. */
 		
 		/* Modules */
 		"module": "ESNext",                                /* Specify what module code is generated. */
-		"rootDir": "lib",                                  /* Specify the root folder within your source files. */
+		"rootDir": "src",                                  /* Specify the root folder within your source files. */
 		"moduleResolution": "bundler",                     /* Specify how TypeScript looks up a file from a given module specifier. */
 		// "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
 		// "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
@@ -49,15 +49,15 @@
 		// "maxNodeModuleJsDepth": 1,                        /* Specify the maximum folder depth used for checking JavaScript files from 'node_modules'. Only applicable with 'allowJs'. */
 		
 		/* Emit */
-		// "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
-		// "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
-		// "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
-		// "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
+		"declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
+		"declarationMap": true,                           /* Create sourcemaps for d.ts files. */
+		"emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
+		// "sourceMap": false,                                /* Create source map files for emitted JavaScript files. */
 		// "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
-		// "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
-		// "outDir": "dist",                                   /* Specify an output folder for all emitted files. */
+		// "outFile": "dist/index.js",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
+		"outDir": "dist",                                   /* Specify an output folder for all emitted files. */
 		// "removeComments": true,                           /* Disable emitting comments. */
-		"noEmit": true,                                   /* Disable emitting files from a compilation. */
+		// "noEmit": true,                                   /* Disable emitting files from a compilation. */
 		// "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
 		// "importsNotUsedAsValues": "remove",               /* Specify emit/checking behavior for imports that are only used for types. */
 		// "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
@@ -107,6 +107,6 @@
 		"skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
 	},
 	"include": [
-		"lib/**/*"
+		"src/**/*"
 	]
 }
