--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"packageManager": "bun@1.2.18",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"b": "bun .conveyer.js && tsc -p ."
+		"b": "bun .conveyer.js --production && tsc -p ."
 	},
 	"repository": {
 		"type": "git",
