--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"imports": {
 		"#utils": "./src/utils/index.ts"
 	},
-	"packageManager": "bun@1.2.21",
+	"packageManager": "bun@1.3.0",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"b": "bun .conveyer.js --production && tsc -p ."
@@ -36,22 +36,24 @@
 	"license": "MIT",
 	"dependencies": {
 		"@nesvet/n": "^1.2.1",
-		"anymatch": "^3.1.3",
-		"chalk": "^5.6.0",
+		"chalk": "^5.6.2",
 		"chokidar": "^4.0.3",
 		"compare-versions": "^6.1.1",
-		"esbuild": "^0.25.9",
-		"esbuild-plugin-jscc": "^1.0.14",
-		"ora": "^8.2.0",
+		"esbuild": "^0.25.11",
+		"esbuild-plugin-jscc": "^1.1.1",
+		"micromatch": "^4.0.8",
+		"ora": "^9.0.0",
 		"process-request": "^1.1.7",
 		"resolve-package-path": "^4.0.3",
-		"tsx": "^4.20.5",
 		"zip-a-folder": "^3.1.9"
 	},
 	"devDependencies": {
-		"@nesvet/eslint-config": "^2.1.2",
-		"@types/node": "^24.3.1",
-		"typescript": "^5.9.2",
-		"type-fest": "^4.41.0"
+		"@nesvet/eslint-config": "^2.1.4",
+		"@types/node": "^24.7.2",
+		"type-fest": "^5.1.0",
+		"typescript": "^5.9.3"
+	},
+	"peerDependencies": {
+		"tsx": "^4.20.6"
 	}
 }
