--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
 		"@nesvet/n": "^1.2.1",
 		"chalk": "^5.6.2",
 		"chokidar": "^4.0.3",
-		"compare-versions": "^6.1.1",
 		"esbuild": "^0.25.11",
 		"esbuild-plugin-jscc": "^1.1.1",
 		"micromatch": "^4.0.8",
 		"ora": "^9.0.0",
 		"process-request": "^1.1.7",
 		"resolve-package-path": "^4.0.3",
+		"semver": "^7.7.3",
 		"zip-a-folder": "^3.1.9"
 	},
 	"devDependencies": {
