--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,15 +5,21 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v1
+      - uses: actions/checkout@v5
+      
+      - uses: oven-sh/setup-bun@v2
       - run: bun install
       - run: bun run b
-      - uses: JS-DevTools/npm-publish@v3
+
+      - uses: actions/setup-node@v6
         with:
-          token: ${{ secrets.NPM_TOKEN }}
-          access: public
+          node-version: "24"
+      - run: npm publish
